@@ -32,7 +32,11 @@ $Id$
   forcing a username/password re-query.
 * Fixed bug where if --daemon and --management-hold are
   used together, --user or --group options would be ignored.
-
+* --ip-win32 adaptive is now the default.
+* --ip-win32 netsh (or --ip-win32 adaptive when in netsh
+  mode) can now set DNS/WINS addresses on the TAP-Win32
+  adapter.
+	
 2005.11.12 -- Version 2.1-beta7
 
 * Allow blank passwords to be passed via the management
